# Hashcode2021

./: package-lock.json  package.json
cpp/: .gitignore  CMakeLists.txt  zipSources.py
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/pizzeria/: Ingredient.h  Pizza.h  Pizzeria.h
cpp/src/solution/: Delivery.h  LightCycle.h  Solution.h
cpp/src/solver/hugo/: Lib.h  Solver.h  Utils.h
cpp/src/world/: Car.h  Intersection.h  Map.h  Street.h  World.h  WorldSimulation.h
cpp/test/: CMakeLists.txt  Lib.h  lightCycle.test.cpp  pizzeria.test.cpp  solution.test.cpp  world.test.cpp
cpp/test/hugo/: solver.test.cpp
src/exporter/: index.ts
src/parser/: index.spec.ts  index.ts  parser.spec.ts  parser.ts  schema.ts
src/simulator/: schema.ts  scoring.spec.ts  scoring.ts
src/solver/hugo/: index.spec.ts  index.ts
typescript/: package.json
typescript/src/simulator/: export.spec.ts  export.ts  index.ts
